- Added basic user management\n - Added title field to menu when adding new page\n - Layout and css is now much better

--- a/ecm/src/main/webapp/resources/css/screen.css
+++ b/ecm/src/main/webapp/resources/css/screen.css
@@ -1,19 +1,21 @@
 body {
 	margin: 0;
 	padding: 0;
-	background-color: #EAECEE;
+	background-image: url('/ecm/resources/images/background-tile.png') ;
 	font-family: Verdana, sans-serif;
 	font-size: 10px;
 }
 
 #header {
-	height: 120px;
-	border-bottom: 3px solid #c0c0c0;
-	background: #204080;
-	text-align: center;
+	height: 200px;
+	margin: auto 0;
+	background: url('/ecm/resources/images/header-stripe.png') transparent repeat-x;
 	color: #f0f0f0;
 	margin: 0;
 	padding: 0;
+}
+#header div.headerContent {
+	height: 140px;
 }
 
 #header h1 {
@@ -25,30 +27,41 @@ body {
 	color : #f0f0f0;
 }
 
-#page {
-	background: #ffffff;
+#pageContainer {
+	width: 100%;
+}
+
+#pageContainer #headerStripe {
+	margin: auto 0;
+	background: url('/ecm/resources/images/background-stripe.png') transparent repeat-x; 
+	width: 100%;
+	height: 155px;
+	background-color: black;
+}
+
+#page, .page {
 	width: 960px;
+	border-radius: 10px;
 	margin-left: auto;
 	margin-right: auto;
-	border-right: solid 2px #a0a0a0;
-	border-bottom: solid 2px #a0a0a0;
+}
+
+.page {
+	border-radius: 0;
+	height: 25px;
 }
 
 #page #body {
 	margin: auto 0;
-	whidth: 940px;
-	
-}
-
-#page #body input {
-	whidth: 350px;
-	
+	border-radius: 10px;
+	padding:10px;
+	width: 940px;
+	background-color: #fafafa;
 }
 
 #sidebar {
 	float: right;
 	width: 200px;	
-	border: 1px solid #d0d0d0;
 	min-height: 240px;
 	padding: 4px;
 }
@@ -143,7 +156,36 @@ body {
 	margin-bottom: 12px;
 }
 
+#menu {
+	width: 900px;
+	margin: auto;
+}
+
+div#navigation {
+	margin: auto 0;
+	width: 900px;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+	height:30px;
+	padding-left: 10px;
+	background: url('/ecm/resources/images/menuBackground-left.png') transparent no-repeat;
+}
+div#navigation span.navEnd {
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+	height: 30px;
+	width: 10px;
+	display: inline-block;
+	float: left;
+	background: url('/ecm/resources/images/menuBackground-right.png') transparent no-repeat;
+}
 div#navigation ul {
+	padding: 0;
+	padding-right: 10px;
+	height:30px;
+	margin:0;
+	float:left;
+	background: url('/ecm/resources/images/menuBackground.png') transparent repeat-x;
 	list-style-type: none;
 }
 
@@ -157,7 +199,14 @@ div#navigation ul li.first {
 }
 
 div#navigation ul li a {
+	text-transform: uppercase;
+	font-size: 10px;
 	text-decoration: none;
+	display: inline-block;
+	height: 0;
+}
+div#navigation ul li a.active {
+	text-decoration: underline;
 }
 
 div#navigation ul li a span {
@@ -166,26 +215,28 @@ div#navigation ul li a span {
 }
 
 div#ecmLogin {
+	width: 500px;
 	margin: auto 0;
-	float:left;
 }
 
 div#ecmLogin .ecmUsername {
-	
+	width: 300px;
 }
 
 div#ecmLogin .ecmPassword {
-	
+	width: 300px;
 }
 
-div#ecmLogin .ecmUsername label,
-div#ecmLogin .ecmUsername label span {
+div#ecmLogin div.ecmUsername label,
+div#ecmLogin div.ecmUsername label span {
 	width: 70px;
+	display: inline-block;
 }
 
 div#ecmLogin .ecmPassword label,
 div#ecmLogin .ecmPassword label span {
 	width: 70px;
+	display: inline-block;
 }
 
 
@@ -195,4 +246,78 @@ div#ecmLogin .ecmUsername #ecmUsernameInput {
 
 div#ecmLogin .ecmPassword #ecmPasswordInput {
 	
+}
+div.top {
+	margin-bottom: 20px;
+	height: 250px;
+}
+
+div.bottom {
+	margin-bottom: 20px;
+	height: 250px;
+}
+
+
+div.leftTop {
+	float:left;
+	width:49%;
+	margin-right: 1%;
+	height:100%;	
+}
+
+div.rightTop {
+	float:left;
+	width:49%;
+	margin-right: 1%;
+	height:100%;
+}
+div.leftBottom {
+	float:left;
+	width:49%;
+	margin-right: 1%;
+	height:100%;
+}
+
+div.rightBottom {
+	float:left;
+	width:49%;
+	margin-right: 1%;
+	height:100%;
+}
+
+
+div.leftColumn {
+	width:49%;
+	margin-right: 1%;
+	min-height: 75%;
+	float:left;
+}
+
+div.rightColumn {
+	width:49%;
+	margin-left: 1%;
+	min-height: 75%;
+	float:left;
+}
+
+#headerText {
+	height: 50px;
+	padding-top: 30px;
+}
+
+#headerText .unique {
+	font-size: 5em;
+	color: #42ac09;
+}
+
+#headerText .technologies {
+	font-size: 5em;
+	color: #fafafa;
+}
+
+#headerText .slogan {
+	font-size: 1.5em;
+	color: #fafafa;
+	display: block;
+	padding-left: 350px;
 }
